BDL-15: adds localized strings

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo": "^42.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
+    "expo-localization": "~10.1.0",
     "expo-splash-screen": "~0.11.2",
     "expo-updates": "~0.8.2",
+    "i18n-js": "^3.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/i18n-js": "^3.8.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
