--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
+    "@expo-google-fonts/inter": "^0.2.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "^42.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-localization": "~10.1.0",
     "expo-splash-screen": "~0.11.2",
     "expo-updates": "~0.8.2",
@@ -22,12 +24,14 @@
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
-    "styled-components": "4.0.3"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
