--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
-    "expo-localization": "~10.1.0",
+    "expo-localization": "~10.2.0",
+    "expo-permissions": "~12.1.1",
     "expo-splash-screen": "~0.11.2",
     "expo-updates": "~0.8.2",
     "i18n-js": "^3.8.0",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-modalize": "^2.0.8",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
